--- a/registration.html
+++ b/registration.html
@@ -16,11 +16,10 @@
 <body>
     <header class="header ">
         <div class="header__wrap wrap">
-            <!-- как вариант можно заменить на ul и переименовать в header__block -->
             <div class="header__items">
-                <a href="index.html" class="logo header__item"><img src="img/logo.svg" alt="logo"></a>
+                <a class="logo header__item"><img src="img/logo.svg" alt="logo"></a>
                 <div class="search">
-                    <form action="#" class="header__item">
+                    <form action="#" class="header__item__form">
                         <label for="search-btn" class="search__btn">
                             <svg width="27" height="28" viewBox="0 0 27 28" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -29,23 +28,21 @@
                             </svg>
                         </label>
                         <input id="search-btn" type="search" class="search__input">
-                        <!-- не понимаю как стилизовать поле ввода (почему-то не получается задать стиль элементу так что бы он соответствовал размеру картинки не был больше либо меньше, у меня получается так что даже при убранных отступах поля лейбл, всё равно поле становится не ровно и либо слишком маленкой высоты либо слишком сильно раздувает поле header) -->
                     </form>
                 </div>
             </div>
             <div class="header__items">
-                <div>
-
+                <a href="#">
                     <button class="header__menu header__item">
-
-                        <svg width="32" height="23" viewBox="0 0 32 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M0 23V20.31H32V23H0ZM0 12.76V10.07H32V12.76H0ZM0 2.69V0H32V2.69H0Z"
-                                fill="#E8E8E8" />
-                        </svg>
-
+                        <figure>
+                            <svg width="32" height="23" viewBox="0 0 32 23" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0 23V20.31H32V23H0ZM0 12.76V10.07H32V12.76H0ZM0 2.69V0H32V2.69H0Z"
+                                    fill="#E8E8E8" />
+                            </svg>
+                        </figure>
                     </button>
-                    <!-- так же у меня не выходит корректный вид меню (если убрать комментарий вы увидите что происходит, почему-то появляется задний фон, у меня гдето в коде ошибка но я не могу понять где, причем если поменять button на div картинка становится нормальной, помогите разобраться пожалуйста) -->
-                </div>
+                </a>
                 <a href="registration.html">
                     <div>
                         <svg width="29" height="29" viewBox="0 0 29 29" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -77,42 +74,48 @@
             </div>
         </div>
     </section>
-
-    <section class="registration wrap">
-        <div class="registration__field">
-            <div class="registration__field_left">
-                <div class="registration__field_customer">
-                    <div class="registration__field_fcs">
-                        <p class="registration__field_text">Your Name</p>
-                        <input type="text" placeholder="Frist name" class="registration__field_input">
-                        <input type="text" placeholder="Last name" class="registration__field_input">
-                    </div>
-                </div>
-                <div class="registration__field_radio">
-                    <input type="checkbox" name="Male" class="registration__field_gender">
-                    <p class="registration__field_male">Meale</p>
-                    <input type="checkbox" name="Female" class="registration__field_gender">
-                    <p class="registration__field_male">Female</p>
-                </div>
-                <div class="registration__field_mail">
-                    <p class="registration__field_text">Login details</p>
-                    <input type="email" name="emailaddress" placeholder="Email" class="registration__field_input">
-                    <input id="userPassword" type="password" placeholder="Password" class="registration__field_input">
-                    <p class="registration__field_translucent">Please use 8 or more characters, with at least 1 number
-                        and a
-                        mixture of uppercase and lowercase letters</p>
-                </div>
-                <button class="registration__field_btn">JOIN NOW
-                    <span><svg width="17" height="10" viewBox="0 0 17 10" fill="none" xmlns="http://www.w3.org/2000/svg"
-                            class="registration__field_span">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M11.54 0.208095C11.6058 0.142131 11.684 0.0897967 11.77 0.0540883C11.8561 0.01838 11.9483 0 12.0415 0C12.1347 0 12.2269 0.01838 12.313 0.0540883C12.399 0.0897967 12.4772 0.142131 12.543 0.208095L16.7929 4.458C16.8589 4.5238 16.9112 4.60196 16.9469 4.68802C16.9826 4.77407 17.001 4.86632 17.001 4.95949C17.001 5.05266 16.9826 5.14491 16.9469 5.23097C16.9112 5.31702 16.8589 5.39518 16.7929 5.46098L12.543 9.71089C12.41 9.84389 12.2296 9.91861 12.0415 9.91861C11.8534 9.91861 11.673 9.84389 11.54 9.71089C11.407 9.57788 11.3323 9.39749 11.3323 9.2094C11.3323 9.0213 11.407 8.84091 11.54 8.70791L15.2898 4.95949L11.54 1.21107C11.474 1.14528 11.4217 1.06711 11.386 0.981059C11.3503 0.895005 11.3319 0.802752 11.3319 0.709584C11.3319 0.616415 11.3503 0.524162 11.386 0.438109C11.4217 0.352055 11.474 0.273891 11.54 0.208095Z"
-                                fill="white" />
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M0 4.95948C0 4.77162 0.0746263 4.59146 0.207462 4.45862C0.340297 4.32579 0.52046 4.25116 0.708318 4.25116H15.583C15.7708 4.25116 15.951 4.32579 16.0838 4.45862C16.2167 4.59146 16.2913 4.77162 16.2913 4.95948C16.2913 5.14734 16.2167 5.3275 16.0838 5.46033C15.951 5.59317 15.7708 5.6678 15.583 5.6678H0.708318C0.52046 5.6678 0.340297 5.59317 0.207462 5.46033C0.0746263 5.3275 0 5.14734 0 4.95948Z"
-                                fill="white" />
-                        </svg>
-                    </span></button>
+    <main>
+        <section class="registration wrap">
+            <div class="registration__field">
+                <form action="registration__form">
+                    <div class="registration__field_left">
+                        <div class="registration__field_customer">
+                            <div class="registration__field_fcs">
+                                <p class="registration__field_text">Your Name</p>
+                                <input type="text" placeholder="Frist name" class="registration__field_input">
+                                <input type="text" placeholder="Last name" class="registration__field_input">
+                            </div>
+                        </div>
+                        <div class="registration__field_radio">
+                            <input type="checkbox" name="Male" class="registration__field_gender">
+                            <p class="registration__field_male">Meale</p>
+                            <input type="checkbox" name="Female" class="registration__field_gender">
+                            <p class="registration__field_male">Female</p>
+                        </div>
+                        <div class="registration__field_mail">
+                            <p class="registration__field_text">Login details</p>
+                            <input type="email" name="emailaddress" placeholder="Email"
+                                class="registration__field_input">
+                            <input id="userPassword" type="password" placeholder="Password"
+                                class="registration__field_input">
+                            <p class="registration__field_translucent">Please use 8 or more characters, with at least 1
+                                number
+                                and a
+                                mixture of uppercase and lowercase letters</p>
+                        </div>
+                        <button class="registration__field_btn">JOIN NOW
+                            <span><svg width="17" height="10" viewBox="0 0 17 10" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" class="registration__field_span">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M11.54 0.208095C11.6058 0.142131 11.684 0.0897967 11.77 0.0540883C11.8561 0.01838 11.9483 0 12.0415 0C12.1347 0 12.2269 0.01838 12.313 0.0540883C12.399 0.0897967 12.4772 0.142131 12.543 0.208095L16.7929 4.458C16.8589 4.5238 16.9112 4.60196 16.9469 4.68802C16.9826 4.77407 17.001 4.86632 17.001 4.95949C17.001 5.05266 16.9826 5.14491 16.9469 5.23097C16.9112 5.31702 16.8589 5.39518 16.7929 5.46098L12.543 9.71089C12.41 9.84389 12.2296 9.91861 12.0415 9.91861C11.8534 9.91861 11.673 9.84389 11.54 9.71089C11.407 9.57788 11.3323 9.39749 11.3323 9.2094C11.3323 9.0213 11.407 8.84091 11.54 8.70791L15.2898 4.95949L11.54 1.21107C11.474 1.14528 11.4217 1.06711 11.386 0.981059C11.3503 0.895005 11.3319 0.802752 11.3319 0.709584C11.3319 0.616415 11.3503 0.524162 11.386 0.438109C11.4217 0.352055 11.474 0.273891 11.54 0.208095Z"
+                                        fill="white" />
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M0 4.95948C0 4.77162 0.0746263 4.59146 0.207462 4.45862C0.340297 4.32579 0.52046 4.25116 0.708318 4.25116H15.583C15.7708 4.25116 15.951 4.32579 16.0838 4.45862C16.2167 4.59146 16.2913 4.77162 16.2913 4.95948C16.2913 5.14734 16.2167 5.3275 16.0838 5.46033C15.951 5.59317 15.7708 5.6678 15.583 5.6678H0.708318C0.52046 5.6678 0.340297 5.59317 0.207462 5.46033C0.0746263 5.3275 0 5.14734 0 4.95948Z"
+                                        fill="white" />
+                                </svg>
+                            </span>
+                        </button>
+                </form>
             </div>
             <div class="registration__field_right">
                 <div class="registration__field_loyality">
@@ -131,21 +134,22 @@
                     </ul>
                 </div>
             </div>
-        </div>
-    </section>
-
+            </div>
+        </section>
+    </main>
     <section class="subscribe">
         <div class="subscribe__wrap">
             <div class="wrap">
                 <div class="subscribe__block">
-                    <div class="subscribe__block__left">
-                        <img src="img/subscribe__img.svg" alt="subscribe__img" class="subscribe__block__img">
+                    <div class="subscribe__block_left">
+                        <figure><img src="img/subscribe__img.svg" alt="subscribe__img" class="subscribe__block__img">
+                        </figure>
                         <p class="subscribe__text">“Vestibulum quis porttitor dui! Quisque<br>viverra nunc mi, a
                             pulvinar purus<br> condimentum“</p>
                     </div>
                     <div class="subscribe__block_right">
-                        <h3 class="subscribe__title"><span class="subscribe__span_title">SUBSCRIBE</span><br><span
-                                class="subscribe__span_text">FOR OUR NEWLETTER AND PROMOTION</span></h3>
+                        <h3 class="subscribe__title"><span class="subscribe__span_title">Subscribe</span><br><span
+                                class="subscribe__span_text">For our newletter and promotion</span></h3>
                         <form action="#" class="subscribe__form">
                             <input class="subscribe__field" type="email" minlength="6" placeholder="Enter Your Email"
                                 required>
